# Backtesting_Engine

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Plan_1.md  README.md  mgc_backtesting_engine_revised_plan.md  program_charter.json  pyproject.toml  validate_program_charter.py
.beads/: config.yaml  issues.jsonl
docs/: verification_contract.md
infra/: __init__.py  backup_restore_baseline.json  restore_drill.py  runtime_stack.py
python/: __init__.py
scripts/: candidate_bundle_smoke.py  definition_of_done_smoke.py  deployment_state_machine_smoke.py  evaluation_protocol_smoke.py  execution_lane_scenarios_smoke.py  expansion_rules_smoke.py  failure_explain_surfaces_smoke.py  failure_path_drills_smoke.py  foundation_smoke.py  lockbox_policy_smoke.py  operational_evidence_gate_smoke.py  opsd_dummy_strategy_smoke.py  opsd_evidence_archive_smoke.py  opsd_live_bar_smoke.py  opsd_readiness_smoke.py  opsd_recovery_smoke.py  opsd_risk_smoke.py  opsd_route_mode_smoke.py  opsd_runtime_smoke.py  opsd_strategy_health_smoke.py  paper_shadow_stage_policy_smoke.py  program_closure_smoke.py  promotion_preflight_smoke.py  readiness_revocation_smoke.py  replay_certification_smoke.py  residual_limitations_smoke.py  runbook_validation_smoke.py  runtime_recovery_smoke.py  runtime_stack_bringup_smoke.sh  rust_runtime_failure_drills_smoke.py  rust_workspace_smoke.py  session_tradeability_smoke.py
tests/: test_absolute_dollar_viability.py  test_account_fit_gate.py  test_accounting_ledger.py  test_artifact_classes.py  test_bar_parity.py  test_baseline_risk_controls.py  test_broker_semantics.py  test_durability.py  (+72 more)
(+195 files in other folders)
